--- a/mobx/mobx_04/pubspec.yaml
+++ b/mobx/mobx_04/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.3
   flutter_mobx: ^1.1.0
+  intl: ^0.16.1
 
 dev_dependencies:
   build_runner: ^1.9.0
@@ -20,3 +21,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/produtos/
