--- a/mobx/mobx_04/pubspec.yaml
+++ b/mobx/mobx_04/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   flutter_mobx: ^1.1.0
   intl: ^0.16.1
+  numberpicker: ^1.2.0
 
 dev_dependencies:
   build_runner: ^1.9.0
