--- a/mobx/mobx_04/pubspec.yaml
+++ b/mobx/mobx_04/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_mobx: ^1.1.0
   intl: ^0.16.1
   numberpicker: ^1.2.0
+  get_it: ^4.0.2
 
 dev_dependencies:
   build_runner: ^1.9.0
