Registro de acréscimo e decréscimo da quantidade de itens selecionados

--- a/mobx/mobx_04/pubspec.yaml
+++ b/mobx/mobx_04/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   intl: ^0.16.1
   numberpicker: ^1.2.0
   get_it: ^4.0.2
+  dialog_information_to_specific_platform: ^0.0.4
 
 dev_dependencies:
   build_runner: ^1.9.0
