--- a/mobx/mobx_10/pubspec.yaml
+++ b/mobx/mobx_10/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   numberpicker: ^1.2.0
   shared_preferences: ^0.5.7+1
   clippy_flutter: ^1.1.1
+  dialog_information_to_specific_platform: ^0.0.4
 
 dev_dependencies:
   build_runner: ^1.9.0
