--- a/mobx/mobx_08/pubspec.yaml
+++ b/mobx/mobx_08/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   numberpicker: ^1.2.0
   shared_preferences: ^0.5.7+1
   clippy_flutter: ^1.1.1
+  mobx: ^1.1.1
 
 dev_dependencies:
   build_runner: ^1.9.0
