Ajustes para plano de aula - Etapa 3

--- a/mobx/mobx_01_video_1_3/pubspec.yaml
+++ b/mobx/mobx_01_video_1_3/pubspec.yaml
@@ -1,4 +1,4 @@
-name: mobx01
+name: mobx01video13
 description: A new Flutter application.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
