--- a/mobx/mobx_05_video_5_2/pubspec.yaml
+++ b/mobx/mobx_05_video_5_2/pubspec.yaml
@@ -1,4 +1,4 @@
-name: mobx05video51
+name: mobx05video52
 description: A new Flutter application.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -16,6 +16,7 @@ dependencies:
   numberpicker: ^1.2.0
   get_it: ^4.0.2
   clippy_flutter: ^1.1.1
+  shared_preferences: ^0.5.7+3
 
 dev_dependencies:
   build_runner: ^1.9.0
